k8s/dev/auth-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-mongo-depl
spec:
  selector:
    matchLabels:
      app: auth-mongo   # select app with label matched auth-mongo
  template:
    metadata:
      labels:
        app: auth-mongo  #label applied to the pod
    spec:
      containers:
      - name: auth-mongo
        image: mongo
        ports:
        - containerPort: 27017
---
  apiVersion: v1
  kind: Service
  metadata:
    name: auth-mongo-svc
  spec:
    selector:
      app: auth-mongo  #find a pod with this label and apply service to it 
    ports:
    - port: 27017
      targetPort: 27017

---
