k8s/dev/auth-ms-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:    # templeate to create the pod withthe containers
    metadata:
      labels:
        app: auth    # must match with matchlables up
    spec:
      containers:
      - name: auth
        image: romanysefen/auth-ms
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: auth-ms
spec:
  selector:
    app: auth
  ports:
  - port: 5001
    targetPort: 5001

---
apiVersion: v1 
kind: Service
metadata:
  name: auth-ms-nodeport
spec:
  type: NodePort
  selector:
    app: auth
  ports:
   - name: auth-ms-nodeport
     protocol: TCP
     port: 5001    # port of the node service which we connect to 
     targetPort: 5001 # port of the pod that the node service will connect to
