k8s/dev/booking-ms-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-depl
spec:
  selector:
    matchLabels:
      app: booking-ms
  template:
    metadata:
      labels:
        app: booking-ms
    spec:
      containers:
        - name: booking-ms
          image: romanysefen/booking-ms
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: booking-ms-svc
spec:
  selector:
    app: booking-ms
  ports:
    - port: 5002
      targetPort: 5002

---
apiVersion: v1
kind: Service
metadata:
  name: booking-ms-svc-nodeport
spec:
  type: NodePort
  selector:
    app: booking-ms
  ports:
    - port: 5002 # port of the node service which we connect to
      targetPort: 5002 # port of the pod that the node service will connect to
