k8s/dev/tickets-fe-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fe-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fe-depl
  template:
    metadata:
      labels:
        app: fe-depl
    spec:
      containers:
       - name: fe-container
         image: romanysefen/tickets-fe
         ports:
           - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
 name: fe-service
spec:
  selector:
    app: fe-depl
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000

---
apiVersion: v1 
kind: Service
metadata:
  name: fe-service-nodeport
spec:
  type: NodePort
  selector:
    app: fe-depl
  ports:
   - name: fe-service-nodeport
     protocol: TCP
     port: 3000    # port of the node service which we connect to 
     targetPort: 3000 # port of the pod that the node service will connect to
