k8s/dev/ingress-svc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-svc
  labels:
    name: ingress-svc
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: tickets.io
      http:
        paths:
          - pathType: Prefix
            path: "/home"
            backend:
              service:
                name: fe-service
                port:
                  number: 3000
          - pathType: Prefix
            path: "/login/submit"
            backend:
              service:
                name: auth-ms
                port:
                  number: 5001
          - pathType: Prefix
            path: "/users/current-user"
            backend:
              service:
                name: auth-ms # name of the clusterIp service running on K8
                port:
                  number: 5001
          - pathType: Prefix
            path: "/signup/submit"
            backend:
              service:
                name: auth-ms
                port:
                  number: 5001
          - pathType: Prefix
            path: "/signout"
            backend:
              service:
                name: auth-ms
                port:
                  number: 5001
          - pathType: Prefix
            path: "/booking"
            backend:
              service:
                name: booking-ms-svc # name of the clusterIp service running on K8
                port:
                  number: 5002
          - pathType: Prefix
            path: "/?(.*)"
            backend:
              service:
                name: fe-service
                port:
                  number: 3000
